# taskly

./: .gitignore  .pre-commit-config.yaml  1.3.UX-Expert.md  1.5.QA-Early Test Architecture Input on High-Risk Areas.md  1.7.PO-create-story.md  2.1.SM-story-checklist.md  2.2.DEV-develop-story.md  2.PM.md  4.Architecture-backend.md  6.PO-execute-checklist-po.md  BA.md  README.md  docker-compose.yml  package.json
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml  test_email.py
backend/alembic/: env.py
backend/alembic/versions/: 20251023_2111_1dbcb67fc5ba_initial_schema.py  20251024_0351_db5ffb5f8f43_add_refresh_tokens_table_for_jwt_.py  20251025_1832_035c1508fe6f_add_workspace_invitations_and_workspace_.py  20251103_1257_7b1d6dc18ec4_add_card_activities_table_for_tracking_.py  20251103_1450_9f081ea649fe_add_workspace_labels_and_card_labels_.py  20251104_1538_0e0869827460_add_card_comments_table_and_update_card_.py
backend/app/: main.py
backend/app/api/: activities.py  assignees.py  auth.py  boards.py  cards.py  comments.py  dependencies.py  health.py  invitations.py  labels.py  members.py  middleware.py  notifications.py  timeline.py  users.py  webhooks.py  websockets.py  workspaces.py
backend/app/core/: cache.py  celery_app.py  config.py  database.py  logging.py  security.py
backend/app/models/: __init__.py  board.py  card.py  card_activity.py  card_assignee.py  card_comment.py  card_label.py  git_repository.py  notification.py  pull_request.py  refresh_token.py  sprint.py  user.py  workspace.py  workspace_audit_log.py  workspace_invitation.py  workspace_label.py  workspace_member.py
backend/app/repositories/: __init__.py  activity_repository.py  assignee_repository.py  base.py  board_repository.py  card_repository.py  comment_repository.py  label_repository.py  timeline_repository.py  user_repository.py  workspace_repository.py
backend/app/schemas/: activity.py  assignee.py  audit.py  auth.py  board.py  card.py  comment.py  invitation.py  label.py  notification.py  timeline.py  user.py  workspace.py
backend/app/services/: activity_service.py  assignee_service.py  audit_service.py  auth_service.py  board_service.py  card_movement_service.py  card_service.py  (+4 more)
backend/scripts/: __init__.py  reset_db.sh  seed_dev_data.py
backend/tests/: conftest.py
(+219 files in other folders)
